fixed alignment of ul and li elements

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@ body {
 
 ul {
   list-style-type: none;
+  padding-left: 0;
 }
 
 /* Navbar */
@@ -186,6 +187,8 @@ ul {
   cursor: pointer;
   display: flex;
   align-items: center;
+  width: 50%;
+  margin-left: 30%;
 }
 
 .friend-container img {
